--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,10 +2,21 @@
 name = "babel"
 version = "0.1.0"
 authors = ["Kojo Adams <samanpa@gmail.com>"]
+build     = "build.rs"
 
-[dependencies]
-babel_parsing = { path = "parsing", version="0.1.0" }
+[lib]
+name = "babel"
 
 [[bin]]
 name = "babel"
 path = "src/main.rs"
+
+[dependencies.regex]
+version = "0.2.0"
+
+# Add a dependency on the LALRPOP runtime library:
+[dependencies.lalrpop-util]
+version = "0.13.1"
+
+[build-dependencies.lalrpop]
+version = "0.13.1"
